# svg2polylines

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  svg-cheatsheet.md
.circleci/: config.yml
examples/: basic.rs  preview.rs  svg2csv.rs
src/: error.rs  lib.rs
src/snapshots/: svg2polylines__tests__quadratic_curve.snap  svg2polylines__tests__smooth_curve.snap
svg2polylines/: CHANGELOG.md  Cargo.toml  LICENSE-MIT
svg2polylines-ffi/: Cargo.toml  example.c  example.py
svg2polylines-ffi/examples/: basic.rs
svg2polylines-ffi/src/: lib.rs
svg2polylines/examples/: basic.rs  preview.rs
svg2polylines/src/: lib.rs  main.rs
