[package]
name = "svg2polylines"
description = "Convert SVG data to a list of polylines (aka polygonal chains or polygonal paths)."
version = "0.1.1"
repository = "https://github.com/dbrgn/svg2polylines"
license = "MIT OR Apache-2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
keywords = ["svg", "polyline", "robotics"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[features]
default = []
use_serde = ["serde", "serde_derive"]

[dependencies]
svgparser = "^0.3"
log = "^0.3"
serde = { version = "^0.9", optional = true }
serde_derive = { version = "^0.9", optional = true }

[dev-dependencies]
env_logger = "^0.4"
serde_json = "^0.9"
