[package]
name = "svg2polylines"
description = "Convert SVG data to a list of polylines (aka polygonal chains or polygonal paths)."
version = "0.3.0"
repository = "https://github.com/dbrgn/svg2polylines"
license = "MIT OR Apache-2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
keywords = ["svg", "polyline", "robotics"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[features]
default = []
use_serde = ["serde", "serde_derive"]

[dependencies]
svgparser = "^0.4"
log = "^0.3"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
lyon_bezier = "^0.5"

[dev-dependencies]
env_logger = "^0.4"
serde_json = "^1.0"
piston_window = "0.67"
piston2d-drag_controller = "0.19"
