[package]
name = "svg2polylines"
description = "Convert SVG data to a list of polylines (aka polygonal chains or polygonal paths)."
version = "0.5.0"
repository = "https://github.com/dbrgn/svg2polylines"
license = "MIT OR Apache-2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
keywords = ["svg", "polyline", "robotics"]
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-*",
]
edition = "2018"

[features]
default = []

[dependencies]
log = "^0.4"
lyon_geom = "0.12"
quick-xml = "0.12"
serde = { version = "1.0", optional = true, features = ["derive"] }
svgtypes = "0.3"

[dev-dependencies]
env_logger = "^0.6"
serde_json = "^1.0"
piston_window = "0.85"
piston2d-drag_controller = "0.24"
